--- a/html/register.html
+++ b/html/register.html
@@ -97,7 +97,6 @@
             bottom: 12%;
             width: 100%;
             margin: 0 auto;
-            background: red
         }
 
         .my_wei_bnt {
@@ -195,13 +194,13 @@
                 </div>
             </div>
         </div>
-
+     
 
     </div>
-
     <div class="reg_bnt">
-        <div class="weui-btn weui-btn_block my_wei_bnt" style="position: relative" onclick="determineClick()">确定</div>
-    </div>
+            <div class="weui-btn weui-btn_block my_wei_bnt" style="position: relative" onclick="determineClick()">确定</div>
+        </div>
+
 
     <!-- 成功提示 -->
     <div id="successful" class="determine" style="display: none">
@@ -239,6 +238,9 @@
 
 </html>
 <script>
+    var body =document.getElementsByTagName("body")[0];
+    body.style.width = document.body.clientWidth + 'px';
+    body.style.clientHeight = document.body.clientHeight + 'px';
     //固定底部背景
     var reg_content = document.getElementById('reg_content');
 
