--- a/html/register.html
+++ b/html/register.html
@@ -94,8 +94,7 @@
 
         .reg_bnt {
          
-            margin: 78% auto 0 auto;
-            background: red;
+            margin: 300px auto 0 auto;
         }
 
         .my_wei_bnt {
