--- a/html/register.html
+++ b/html/register.html
@@ -94,7 +94,8 @@
 
         .reg_bnt {
          
-            margin: 300px auto 0 auto;
+            margin: 40% auto 0 auto;
+            background: red;
         }
 
         .my_wei_bnt {
