--- a/html/register.html
+++ b/html/register.html
@@ -69,7 +69,8 @@
         }
 
         .weui-vcode-btn {
-            border: none
+            border: none;
+            font-size: 14px
         }
 
         button.weui-vcode-btn {
@@ -78,6 +79,7 @@
             height: 35px;
             line-height: 35px;
             color: #fff
+
         }
 
         .my_weui_close {
@@ -185,7 +187,7 @@
                             <input class="weui-input my_weui_input" type="tel" placeholder="验证码">
                         </div>
                         <div class="weui-cell__ft">
-                            <button class="weui-vcode-btn">获取验证码</button>
+                            <button class="weui-vcode-btn" >获取验证码</button>
                         </div>
                     </div>
                 </div>
