--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             width: 30%;
             background: #4E9BFD;
             float: left;
-            font-size: 18px;
+            font-size: 14px;
             color: #fff;
             
         }
@@ -32,43 +32,66 @@
             float: left;
         }
         #box_right_top{
-            height: 50px;
+            height: 40px;
             background: #F7F7F7;
             text-align: center;
-            line-height: 50px;
+            line-height: 40px;
             width: 100%;
             border-bottom: 0.5px solid #ddd;
         }
         #box_right_top img{
             display: block;
             float: left;
-            width: 30px;
+            width: 25px;
             position: relative;
-            top: 10px;
+            top: 8px;
             left: 10px;
         }
         .my_borde{
             border-bottom: 0.5px solid #fff;
+            padding: 10px 0 10px 10px;
+            width: 100%
+        }
+        #zgh_c img{
+            width:25px;
+            top: 7px;
+            margin-right:5px 
+        }
+        .box_right_list{
+            list-style-type: none;
             padding: 10px;
+            padding: 0;
+            margin: 0;
+        }
+        .box_right_list li{
+            height: 50px;
+            line-height: 50px;
+            font-size:14px; 
+            border-bottom: 1px solid #ddd;
+            color: #333;
+            margin: 0;
+            padding: 0px;
+        }
+        .box_right_list li img{
+            width:20px;
+            margin: 0 5px 0px 10px;
+            position: relative;
+            top: 7px;
+        }
+        #hd{
             position: relative;
         }
-        .weui-my_borde:after {
-            content: " ";
-            display: inline-block;
-            height: 8px;
-            width: 8px;
-            border-width: 2px 2px 0 0;
-            border-color: #B2B2B2;
-            border-style: solid;
-            -webkit-transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
-            transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
-            position: relative;
-            top: -2px;
+        #zgh_c #hd .hd_img_one{
             position: absolute;
-            top: 50%;
-            margin-top: -5px;
-            right: 0;
+            right: 15px;
+            top: 15px
         }
+        #zgh_c #hd .hd_img_two{
+            position: absolute;
+            right: 15px;
+            top: 15px
+        }
+
     </style>
 </head>
 <body>
@@ -77,20 +100,33 @@
         <div id="box_left">
           <div style="padding: 10px">组织部门</div>
           <div id="zgh" style="padding: 10px">中广核</div>
-            <div id="zgh_c" style="display: block">
-                <div class="my_borde" id="hd">&nbsp;&nbsp;大亚湾核电站<div class="weui-cell__ft"></div></div>
+            <div id="zgh_c" style="display: block;position: relative">
+                <div class="my_borde" id="hd">&nbsp;&nbsp;<img src="zz.png">大亚湾核电站<img class="hd_img_one" src="right.png" style="display: none" /><img class="hd_img_two" src="down.png"/></div>
                 <div id="hd_c" style="display: block">
-                    <div class="my_borde hd_c" id="cbs">&nbsp;&nbsp;&nbsp;&nbsp;承包商管理</div>
+                    <div id="cbs" class="my_borde hd_c"  style="position: relative">
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <img src="zz.png" />承包商管理
+                        <img class="hd_img_one"  style="position: absolute;top: 15px;right: 15px;display: none;" src="right.png">
+                        <img class="hd_img_two" style="position: absolute;top: 15px;right: 15px;" src="down.png" />
+                    </div>
                         <div id="cbs_c" style="display: block">
-                        <div class="my_borde hd_c cbs_c" id="bz">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;部长</div>
-                        <div class="my_borde hd_c cbs_c" id="ky">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;科员</div>
-                        <div class="my_borde hd_c cbs_c" id="js">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;技术</div>
+                        <div class="my_borde hd_c cbs_c" id="bz">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="gw.png">部长</div>
+                        <div class="my_borde hd_c cbs_c" id="ky">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="gw.png">科员</div>
+                        <div class="my_borde hd_c cbs_c" id="js">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="gw.png">技术</div>
                     </div>
                 </div>
             </div>
         </div>
         <div id="box_right">
             <div id="box_right_top" > <img id="box_right_top_img" src="cd.png">通讯录</div>
+            <div>
+                <ul class="box_right_list">
+                        <li class="zs" style="display: none"><img src="nan.png">张三</li>
+                        <li class="ls" style="display: none"><img src="nu.png">李四</li>
+                        <li class="ww" style="display: none"><img src="nan.png">王五</li>
+                        <li class="zl" style="display: none"><img src="nu.png">赵六</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
@@ -110,6 +146,7 @@
         console.log($('#zgh_c').css('display'))
         if( $('#zgh_c').css('display') == 'block'){
             $('#zgh_c').hide()
+
         }else{
             $('#zgh_c').show()
         }
@@ -117,26 +154,40 @@
     })
    $('#hd').click(function(){
         if( $('#hd_c').css('display') == 'block'){
-                $('#hd_c').hide()
+                $('#hd_c').hide();
+                $('#hd .hd_img_one').show()
+                $('#hd .hd_img_two').hide()
             }else{
                 $('#hd_c').show()
+                $('#hd .hd_img_one').hide()
+                $('#hd .hd_img_two').show()
         }
    })
    $('#cbs').click(function(){
     if( $('#cbs_c').css('display') == 'block'){
                 $('#cbs_c').hide()
+                $('#cbs .hd_img_one').show()
+                $('#cbs .hd_img_two').hide()
+
             }else{
                 $('#cbs_c').show()
+                $('#cbs .hd_img_one').hide()
+                $('#cbs .hd_img_two').show()
         }
    })
    $('#bz').click(function(){
+    $('.box_right_list li').hide() 
+    $('.box_right_list .zs').show()         
 
    })
    $('#ky').click(function(){
-
+    $('.box_right_list li').hide() 
+    $('.box_right_list .ls').show()    
    })
-   $('js').click(function(){
-
+   $('#js').click(function(){
+    $('.box_right_list li').hide();
+    $('.box_right_list .ww').show();     
+    $('.box_right_list .zl').show(); 
    })
 
 
