--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
             width: 25px;
             float: right;
             position: absolute;
-            top: 15px;
+            top: 12px;
             right: 25px;
         }
         .ss_input{
             width: 67%;
-            height: 30px;
-            line-height: 30px;
+            height: 25px;
+            line-height: 25px;
             padding-left: 10px;
             border: none;
             border: 1px solid #ddd;
@@ -119,7 +119,8 @@
             margin-right: 10px;
         }
         #ss_content{
-            display: none
+            display: none;
+            font-weight: normal;
         }
     </style>
 </head>
@@ -152,7 +153,7 @@
                 <ul class="box_right_list">
                         <div class="box_right_list_header">
                             <div id="lj" style="display: block">&nbsp;中广核&nbsp;大亚湾核电站&nbsp;承包商管理&nbsp;<span style="color: #4E9BFD">部长</span></div>
-                            <div id="ss_content"><input type="text" class="ss_input">确定</div>
+                            <div id="ss_content"><input type="text" class="ss_input" >确定</div>
                             <img id="ss" src="ss.png"/>
                         </div>
                         <li class="zs" style="display: none"><img src="nan.png">张三</li>
