--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
             display: block;
             float:right;
             margin-right: 15px;
+            position: relative;
+            top: 7px;
         }
         #myBack{
             height: 1000px;
@@ -166,10 +168,10 @@
                             <div id="ss_content"><input type="text" class="ss_input" >搜索</div>
                             <img id="ss" src="ss.png"/>
                         </div>
-                        <li class="zs" style="display: none"><img src="nan.png">张三(S28001)<span>13800138000</span></li>
-                        <li class="ls" style="display: none"><img src="nu.png">李四(S28002)<span>13800138000</span></li>
-                        <li class="ww" style="display: none"><img src="nan.png">王五((28003)<span>13800138000</span></li>
-                        <li class="zl" style="display: none"><img src="nu.png">赵六(S28004)<span>13800138000</span></li>
+                        <li class="zs" style="display: none"><img src="nan.png">张三&nbsp;(S28001)<span>13800138000</span></li>
+                        <li class="ls" style="display: none"><img src="nu.png">李四&nbsp;(S28002)<span>13800138000</span></li>
+                        <li class="ww" style="display: none"><img src="nan.png">王五&nbsp;(28003)<span>13800138000</span></li>
+                        <li class="zl" style="display: none"><img src="nu.png">赵六&nbsp;(S28004)<span>13800138000</span></li>
                 </ul>
             </div>
             <div id="myBack"></div>
