--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </style>
 </head>							
 <body>
-    <img src="05.gif" style="width:100%;height:100%">
+    <img src="06.jpg" style="width:100%;height:100%">
 </body>						
 </html>
