--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>杨春霞我爱你</title>
+<title></title>
 <link href="http://hovertree.com/texiao/html5/index/hovertreewelcome.css" type="text/css" rel="stylesheet" />
 </head>
 <body ondragstart="window.event.returnValue=false" oncontextmenu="window.event.returnValue=false" onselectstart="event.returnValue=false">
@@ -10,13 +10,13 @@
 <div id="hovertreecontainer">
 
 <div>
-<h1 id="h1">李棠寅 </h1>
+<h1 id="h1"> </h1>
 <!--
 	作者：li_zhenglei
 	时间：2018-08-17
 	描述：<h2 id="h2"> 想问候，不知从何问起，就直接说喜欢你！</h2>
 -->
-<h2 id="h2"> 2020 杨春霞我爱你~~我要娶你做老婆。</h2>
+<h2 id="h2"> </h2>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
