--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ function captureImage(){
 	</script>
 	</head>
 	<body>
+		<input type="file" accept="image/*" capture="camera" style="background:red;width:300px;height:100px"> 
 		<button onclick="captureImage()">拍照</button>
 	</body>
 </html>
