--- a/index.html
+++ b/index.html
@@ -1,34 +1,96 @@
 <!DOCTYPE html>
-<html>
-	<head>
-	<meta charset="utf-8">
-	<title>Camera Example</title>
-	<script type="text/javascript">
-// 扩展API加载完毕后调用onPlusReady回调函数 
-document.addEventListener( "plusready", onPlusReady, false );
-// 扩展API加载完毕，现在可以正常调用扩展API 
-function onPlusReady() {
-	console.log("plusready");
-}
-// 拍照
-function captureImage(){
-	var cmr = plus.camera.getCamera();
-	var res = cmr.supportedImageResolutions[0];
-	var fmt = cmr.supportedImageFormats[0];
-	console.log("Resolution: "+res+", Format: "+fmt);
-	cmr.captureImage( function( path ){
-			alert( "Capture image success: " + path );  
-		},
-		function( error ) {
-			alert( "Capture image failed: " + error.message );
-		},
-		{resolution:res,format:fmt}
-	);
-}
-	</script>
-	</head>
-	<body>
-		<input type="file" accept="image/*" capture="camera" style="background:red;width:300px;height:100px"> 
-		<button onclick="captureImage()">拍照</button>
-	</body>
-</html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <title>拍照</title>
+</head>
+<style>
+	body,html{
+		width: 100%;
+		height: 100%;
+		padding: 0;
+		margin: 0;
+	}
+	#bnt{
+		position: fixed;
+		bottom: 0px;
+		text-align: center;
+	}
+	#capture{
+		width: 100px;
+		height: 100px;
+		background-color: aqua;
+		color: #ffffff;
+	}
+</style>
+<body>
+<video id="video" width="100%" height="100%" autoplay="autoplay"></video>
+<!--拍照按钮-->
+<div id="bnt">
+    <button id="capture">拍照</button>
+</div>
+<!--描绘video截图-->
+<canvas id="canvas" width="640" height="480"></canvas>
+<script>
+    let video = document.getElementById("video");
+    let canvas = document.getElementById("canvas");
+    let context = canvas.getContext("2d");
+	let constraints = { audio: true, video: { facingMode: { exact: "environment" } } }
+    // 老的浏览器可能根本没有实现 mediaDevices，所以我们可以先设置一个空的对象
+    if (navigator.mediaDevices === undefined) {
+        navigator.mediaDevices = {};
+    }
+
+    // 一些浏览器部分支持 mediaDevices。我们不能直接给对象设置 getUserMedia
+    // 因为这样可能会覆盖已有的属性。这里我们只会在没有getUserMedia属性的时候添加它。
+    if (navigator.mediaDevices.getUserMedia === undefined) {
+        navigator.mediaDevices.getUserMedia = function (constraints) {
+
+            // 首先，如果有getUserMedia的话，就获得它
+            var getUserMedia = navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+
+            // 一些浏览器根本没实现它 - 那么就返回一个error到promise的reject来保持一个统一的接口
+            if (!getUserMedia) {
+                return Promise.reject(new Error('getUserMedia is not implemented in this browser'));
+            }
+
+            // 否则，为老的navigator.getUserMedia方法包裹一个Promise
+            return new Promise(function (resolve, reject) {
+                getUserMedia.call(navigator, constraints, resolve, reject);
+            });
+        }
+    }
+
+    //默认使用前摄像头，强制使用后置摄像头如下设置
+
+   // let constraints = {video: true};
+
+   
+    navigator.mediaDevices.getUserMedia(constraints)
+        .then(function (stream) {
+            // 旧的浏览器可能没有srcObject
+            if ("srcObject" in video) {
+                video.srcObject = stream;
+            } else {
+                // 防止在新的浏览器里使用它，应为它已经不再支持了
+                video.src = window.URL.createObjectURL(stream);
+            }
+            video.onloadedmetadata = function (e) {
+                video.play();
+            };
+        })
+        .catch(function (err) {
+            console.log(err.name + ": " + err.message);
+        });
+
+    //注册拍照按钮的单击事件
+    document.getElementById("capture").addEventListener("click", function () {
+        //绘制画面
+		alert('执行')
+        context.drawImage(video, 0, 0, 640, 480);
+		alert('执行1')
+    });
+</script>
+</body>
+</html> 
