--- a/jl.html
+++ b/jl.html
@@ -70,15 +70,45 @@
 	</div>
 	<div class="my_p_list">
 		<p class="bg-primary titel">掌握技能<img src="img/left.png"></p>
-		<div class="content" style="display: block;">1</div>
+		<div class="content" style="display: block;">
+			1 熟练前端布局HTML、CSS，wei-ui,element-ui,等手机端PC端UI框架
+			2 熟练前端Javascript、jQuery、AJAX、JSON、Cookie、Vue、uni-app,apiclound
+			3 java(目前正在学习中)。
+		</div>
 		<p class="bg-success titel">个人情况<img src="img/left.png"></p>
-		<div class="content" style="display: none;">2</div>
-		<p class="bg-info titel">项目经历1<img src="img/left.png"></p>
-		<div class="content" style="display: none;">3</div>
-		<p class="bg-warning titel">项目经历2<img src="img/left.png"></p>
-		<div class="content" style="display: none;">4</div>
-		<p class="bg-danger titel">项目经历3<img src="img/left.png"></p>
-		<div class="content" style="display: none;">5</div>
+		<div class="content" style="display: none;">
+			我叫李棠寅,现在东莞,我不是计算机专业,甚至学历比较低，怀着对IT行业的热爱,自学了前端开发,今后的职业规划向着全栈多方位发展,目前掌握后html,js,cs,JQ,vue,手机APP（uni-app,apiclound），写过响应、移动、pc端后台element-ui，公众号开发，微信小程序开发，APP手机混合开发，熟悉MVVM、MVC开发、并具有高效的自学能力,能独立分析解决问题。
+		</div>
+		<p class="bg-info titel">项目经历1 2015年 广东爱唯视科技有限公司<img src="img/left.png"></p>
+		<div class="content" style="display: none;">
+			<div>1 http://eyesws.com/#/main（公众号）</div>
+			<div>2 http://store.test.eyesws.com/#!/login （爱唯视库存系统）</div>
+			<div>关于爱唯视在公司主要职责前期负责前端学习HTML CSS JS JQ ，后期VUE,。由于刚进入IT行业。基本跟项目大佬步伐走。
+			在此感谢爱唯视让我进入IT前端,同时特别庆幸有位牛逼的前端大佬的鞭策。我能快速进步。</div>
+		</div>
+		<p class="bg-warning titel">项目经历2019年 中广核（大亚湾核电）<img src="img/left.png"></p>
+		<div class="content" style="display: none;">
+			<div>1 手机人事APP开发（核电内部应用，抱歉不能给你下载体验）</div>
+			<div>a 主要职责，负责手机原型构建，手机美术切图，手机技术难点的开发，</div>
+			<div>b 技术难点，1甲方技术选型是指定UNI-APP混合开发。</div>
+			<div>c 原型和美术没有专职人员跟踪，由前端一手包办</div>
+			<div>d 甲方对接数据类型webserver类型，和中间件，都是我没接触过的</div>
+			<div>关于中广核高由于有了2年的技术积累，基本能快速接触新的东西并实现客户需求。通过中广核大型国企学了不少大型企业的操作流程和代码规范。特别是大型中间件的应用。收获颇多。</div>
+
+		</div>
+		<p class="bg-danger titel">项目经历2017-2018东莞七宝树有限公司<img src="img/left.png"></p>
+		<div class="content" style="display: none;">
+			<div>1 https://www.armpc.xyz/#/login 七宝树后台</div>
+			<div>2 飞云教育教师端APP</div>
+			<div>2 飞云教育学生端APP</div>			
+		</div>
+		<p class="bg-danger titel">项目经历 小程序（都是上线项目，可以搜索体验）<img src="img/left.png"></p>
+		<div class="content" style="display: none;">
+			<div>1 康源物联小程序（物联）</div>
+			<div>2 穿云箭共享物流（物流）</div>
+			<div>2 ID生活家（商城）</div>			
+		</div>
+
 	</div>
 
 </body>
