--- a/index.html
+++ b/index.html
@@ -1,65 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>摄像头拍照</title>
-</head>
-<body>
-  <video id="video" width="480" height="320" controls>
-  </video>
-  <div>
-    <button id="capture">拍照</button>
-  </div>
-  <canvas id="canvas" width="480" height="320"></canvas>
-  <script>
-    //访问用户媒体设备的兼容方法
-    function getUserMedia(constraints, success, error) {
-      if (navigator.mediaDevices.getUserMedia) {
-        //最新的标准API
-        navigator.mediaDevices.getUserMedia(constraints).then(success).catch(error);
-      } else if (navigator.webkitGetUserMedia) {
-        //webkit核心浏览器
-        navigator.webkitGetUserMedia(constraints,success, error)
-      } else if (navigator.mozGetUserMedia) {
-        //firfox浏览器
-        navigator.mozGetUserMedia(constraints, success, error);
-      } else if (navigator.getUserMedia) {
-        //旧版API
-        navigator.getUserMedia(constraints, success, error);
-      }
-    }
+<html>
+    <head>
+        <title>html5调用摄像头拍照</title>
+        <style type="text/css">
+        #camera {
+            width: 640px;
+            height: 525px;
+            position: fixed;
+            border: 1px solid #f0f0f0;
+            -moz-border-radius: 4px 4px 0 0;
+            -webkit-border-radius: 4px 4px 0 0;
+            border-radius: 4px 4px 0 0;
+            -moz-box-shadow: 0 0 4px rgba(0,0,0,0.6);
+            -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.6);
+            box-shadow: 0 0 4px rgba(0,0,0,0.6);
+        }
 
-    let video = document.getElementById('video');
-    let canvas = document.getElementById('canvas');
-    let context = canvas.getContext('2d');
+        #buttons {
+            text-align: center;
+        }
 
-    function success(stream) {
-      //兼容webkit核心浏览器
-      let CompatibleURL = window.URL || window.webkitURL;
-      //将视频流设置为video元素的源
-      console.log(stream);
-
-      //video.src = CompatibleURL.createObjectURL(stream);
-      video.srcObject = stream;
-      video.play();
-    }
-
-    function error(error) {
-      console.log(`访问用户媒体设备失败${error.name}, ${error.message}`);
-    }
-
-    if (navigator.mediaDevices.getUserMedia || navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia) {
-      //调用用户媒体设备, 访问摄像头
-      getUserMedia({video : {width: 480, height: 320}}, success, error);
-    } else {
-      alert('不支持访问用户媒体');
-    }
-
-    document.getElementById('capture').addEventListener('click', function () {
-      context.drawImage(video, 0, 0, 480, 320);      
-    })
-  </script>
-</body>
+        .btn {
+            width: 99px;
+            height: 38px;
+            line-height: 32px;
+            margin: 0px 4px 0px 0px;
+            border: 1px solid #fff;
+            -moz-border-radius: 5px; /* Gecko browsers */
+            -webkit-border-radius: 5px; /* Webkit browsers */
+            border-radius: 5px; /* W3C syntax */
+            cursor: default;
+            text-align: center;
+            font-size: 14px;
+            color: #fff;
+        }
+        .btn_blue {
+            background-color: #5CACEE;
+        }
+        .btn_green {
+            background-color: #00EE00;
+        }
+        .hidden{ display:none }
+    </style>
+    </head>
+    <body>
+        <div id="camera">
+            <div id="contentHolder">
+                <video id="video" width="640" height="480" autoplay></video>
+                <canvas style="display:none;" id="canvas" width="640" height="480"></canvas>
+            </div>
+            <div id="buttons">
+                <button id="btn_snap" class="btn btn_blue">拍照</button>
+                <button id="btn_cancel" class="btn btn_blue" style="display:none;">取消</button>
+                <button id="btn_upload" class="btn btn_green" style="display:none;">上传</button>
+            </div>
+        </div>
+    </body>
 </html>
+<script type="text/javascript">
+        // 添加事件监听器
+        window.addEventListener("DOMContentLoaded", function () {
+            // 获取元素，创建设置等等
+            var canvas = document.getElementById("canvas"),
+                    context = canvas.getContext("2d"),
+                    video = document.getElementById("video"),
+                    videoObj = { "video": true },
+                    errBack = function (error) {
+                        console.log("Video capture error: ", error.code);
+                    };
+
+            // 添加video 监听器
+            if (navigator.getUserMedia) { // 标准
+                navigator.getUserMedia(videoObj, function (stream) {
+                    video.src = stream;
+                    video.play();
+                }, errBack);
+            } else if (navigator.webkitGetUserMedia) { // WebKit 前缀
+                navigator.webkitGetUserMedia(videoObj, function (stream) {
+                    video.src = window.webkitURL.createObjectURL(stream);
+                    video.play();
+                }, errBack);
+            }
+            else if (navigator.mozGetUserMedia) { // Firefox 前缀
+                navigator.mozGetUserMedia(videoObj, function (stream) {
+                    video.src = window.URL.createObjectURL(stream);
+                    video.play();
+                }, errBack);
+            }
+            else {
+                alert("浏览器不支持HTML5！");
+                //console.log('your browser not support getUserMedia');
+            }
+
+            document.getElementById("btn_snap").addEventListener("click", function () {
+                context.drawImage(video, 0, 0, 640, 480);
+            });
+        }, false);
+</script>
