--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>可爱的陈晓语童鞋</title>
+<title>可爱的陆宁小姐姐</title>
 <link href="http://hovertree.com/texiao/html5/index/hovertreewelcome.css" type="text/css" rel="stylesheet" />
 </head>
 <body ondragstart="window.event.returnValue=false" oncontextmenu="window.event.returnValue=false" onselectstart="event.returnValue=false">
@@ -10,13 +10,13 @@
 <div id="hovertreecontainer">
 
 <div>
-<h1 id="h1">可爱的陈晓语童鞋</h1>
+<h1 id="h1">可爱的陆宁小姐姐</h1>
 <!--
 	作者：liTangYin
 	时间：2020-12-24
 	描述：<h2 id="h2"> 想问候，不知从何问起，就直接说喜欢你！</h2>
 -->
-<h2 id="h2"> 2020 12 24 平安夜快乐</h2>
+<h2 id="h2"> 可爱的陆宁小姐姐，快乐每一天</h2>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
