--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 	时间：2020-12-24
 	描述：<h2 id="h2"> 想问候，不知从何问起，就直接说喜欢你！</h2>
 -->
-<h2 id="h2"> 可爱的陆宁小姐姐，快乐每一天</h2>
+<h2 id="h2"> 可爱的陆宁小姐姐，从前的日色变得慢。车，马，邮件都慢，一生只爱你一个人。</h2>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
