--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <div id="hovertreecontainer">
 
 <div>
-<h1 id="h1">我叫李棠寅，是位 WEB 前端工程师，精通 VUE，使用组件化编
-程,使用 vue+elemenui 框架搭建前端后台,熟悉 APP 混合开发。
+<h1 id="h1">
+  <p>我叫李棠寅，是位 WEB 前端工程师，精通 VUE，使用组件化编
+    程,使用 vue+elemenui 框架搭建前端后台,熟悉 APP 混合开发。</p>
 工作经历
 2016.04-2017.09 珠海朋奇科技有限责任公司
 职位：web 前端
+  <p>
 项目经历
 珠海禁毒 App。前端后台 vue+elementui
 ⚫ 期间担任珠海禁毒项目的项目经理，列出计划及工作安
@@ -25,6 +27,8 @@
 2017.09 - 2018.09 大亚湾核电站
 职位：App 前端开发人员/需求顾问/前端后台
 vue+elementui
+  </p>
+   <p>
 项目经历
 大亚湾核电人员资质管理 App/前端后台
 vue+elementui
@@ -37,6 +41,8 @@ App 项目
 ⚫ 项目后期负责移交运维工作所需的文档整理，App 漏洞扫
 描的问题排查
 ⚫ 参与天融信对接通讯录业务沟通
+  </p>
+   <p>
 大亚湾核电点巡检 App/前端后台 vue+elementui
 ⚫ 负责点巡检 App 开发，采用 uni-app 技术开发，包含视
 频、音频、工作流等
@@ -52,6 +58,8 @@ App 项目
 ⚫ 参与后续移交运维，负责移交文档的整理、App 漏洞的排
 查工作
 2017.09 – 至今 惠州天境科技有限公司
+  </p>
+  <p>
 平安指数 App/前端后台 vue+elementui
 ⚫ 参与平安指数 App 界面设计与业务对接，对珠海各区的健
 康指数、平安指数统计与展示。
@@ -66,7 +74,8 @@ App 项目
 及优化的地方，并及时跟进反馈完善。
 ⚫ 使用 uni-app,vue-elementui
 ⚫ 、使用 android 原生定位、及 Echarts、和 websocket 实
-时通讯</h1>
+时通讯
+  </p></h1>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
