--- a/index.html
+++ b/index.html
@@ -1,79 +1,2 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>李棠寅web前端工程师</title>
-<body>
-
-<div>
-  <p>我叫李棠寅，是位 WEB 前端工程师，精通 VUE，使用组件化编
-    程,使用 vue+elemenui 框架搭建前端后台,熟悉 APP 混合开发。</p>
-工作经历
-2016.04-2017.09 珠海朋奇科技有限责任公司
-职位：web 前端
-  <p>
-项目经历
-珠海禁毒 App。前端后台 vue+elementui
-⚫ 期间担任珠海禁毒项目的项目经理，列出计划及工作安
-排，参与政府和线下人员沟通交流业务及会议，大量进行
-珠海各地走访与需求沟通，并整理需求开展工作
-⚫ 使用 uni-app,vue-elementui
-⚫ 对接珠海公安内网数据处理
-2017.09 - 2018.09 大亚湾核电站
-职位：App 前端开发人员/需求顾问/前端后台
-vue+elementui
-  </p>
-   <p>
-项目经历
-大亚湾核电人员资质管理 App/前端后台
-vue+elementui
-⚫ 使用数字天堂 uni-app 技术开发，开发大亚湾核电人资
-App 项目
-⚫ 参与讨论 App 的需求分析、并写需求规格书，绘画 Axure
-原型图设计，并于美工配合处理各个界面的细节以及业务
-⚫ 其中负责代码的开发、App 上线打包、平台的发布、以及
-发布到天融信平台
-⚫ 项目后期负责移交运维工作所需的文档整理，App 漏洞扫
-描的问题排查
-⚫ 参与天融信对接通讯录业务沟通
-  </p>
-   <p>
-大亚湾核电点巡检 App/前端后台 vue+elementui
-⚫ 负责点巡检 App 开发，采用 uni-app 技术开发，包含视
-频、音频、工作流等
-⚫ 其中参与需求的研讨，任务的下发、指派、委托、审批
-⚫ 负责 App 平时的投产发布，基座整理，发布至天融信
-⚫ 参与后续移交运维，负责移交文档的整理、App 漏洞的排
-查工作
-大亚湾防异物管理系统/前端后台 vue+elementui
-⚫ 负责防异物管理系统 App 开发，采用 uni-app 技术开
-发，包含视频、音频、工作流等
-⚫ 其中参与需求的研讨，任务的下发、指派、委托、审批
-⚫ 负责 App 平时的投产发布，基座整理，发布至天融信
-⚫ 参与后续移交运维，负责移交文档的整理、App 漏洞的排
-查工作
-2017.09 – 至今 惠州天境科技有限公司
-  </p>
-  <p>
-平安指数 App/前端后台 vue+elementui
-⚫ 参与平安指数 App 界面设计与业务对接，对珠海各区的健
-康指数、平安指数统计与展示。
-⚫ 使用 uni-app,vue-elementui，负责开发、与客户对接、
-上线发布。
-⚫ 使用 Echarts 对接 App 展示平安指数统计图
-大型安保警务通 App/前端后台 vue+elementui
-⚫ 珠海航展大型安保 App 的工作，参与界面开发与需求沟
-通，
-⚫ 参与界面设计与用户交互和体验，并在现场与安保技术人
-员维护工作，调查并跟踪现场人员使用 App 过程中的不足
-及优化的地方，并及时跟进反馈完善。
-⚫ 使用 uni-app,vue-elementui
-⚫ 、使用 android 原生定位、及 Echarts、和 websocket 实
-时通讯
-  </p>
-
-
-</div>
-
-</body>
-</html>
+<!DOCTYPE html><html lang=zh-CN><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><title>mix-mall 电商项目模版</title><script>var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
+            document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')</script><link rel=stylesheet href=./static/index.2772579d.css></head><body><noscript><strong>Please enable JavaScript to continue.</strong></noscript><div id=app></div><script src=./static/js/chunk-vendors.245a6af7.js></script><script src=./static/js/index.fabc893c.js></script></body></html>
